--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">DNDCallBlocker</string>
     <string name="ok">Ok</string>
     <string name="reject_call_message">I am busy right now. Will call you back soon!</string>
+    <string name="calls_blocked">Calls blocked</string>
+    <string name="calls_blocked_description">These notifications are to notify user about a blocked calls in DND mode</string>
+    <string name="blacklist_added">ca-app-pub-9931022608614937/5731722221</string>
+    <string name="main_screen_banner">ca-app-pub-9931022608614937/3297130571</string>
+    <string name="blacklist_screen_banner">ca-app-pub-9931022608614937/3084296015</string>
+    <string name="admob_id">ca-app-pub-9931022608614937~9315744013</string>
+    <string name="upgrade_to_pro">Upgrade to Pro</string>
+
 </resources>
