--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">DNDCallBlocker</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
     <string name="reject_call_message">I am busy right now. Will call you back soon!</string>
     <string name="calls_blocked">Calls blocked</string>
     <string name="calls_blocked_description">These notifications are to notify user about a blocked calls in DND mode</string>
@@ -9,5 +9,10 @@
     <string name="blacklist_screen_banner">ca-app-pub-9931022608614937/3084296015</string>
     <string name="admob_id">ca-app-pub-9931022608614937~9315744013</string>
     <string name="upgrade_to_pro">Upgrade to Pro</string>
+    <string name="block_all_incoming_calls_sms"><![CDATA[Block all incoming Calls & SMS]]></string>
+    <string name="show_notifications">Show Notifications</string>
+    <string name="block_incoming_sms">Block incoming SMS</string>
+    <string name="block_call_with_sms">Block call with SMS</string>
+    <string name="blacklist_numbers">Blacklist numbers</string>
 
 </resources>
